--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav ul {
     } 
 
 body{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Baskerville', "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;  
     background-color:rgb(215, 242, 250);
     padding-left: 15%;
     padding-right:15%;
