--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ nav ul {
     } 
 
 body{
-    font-family: 'Baskerville', "Baskerville Old Face", "Goudy Old Style", Garamond, "Times New Roman", serif;  
+    font-family: "Palatino", "Palatino LT STD", "Palatino Linotype", "Book Antiqua", Georgia, serif;  
     background-color:rgb(215, 242, 250);
     padding-left: 15%;
     padding-right:15%;
